src/test/ui/did_you_mean/issue-21659-show-relevant-trait-impls-2.stderr
error[E0277]: the trait bound `Bar: Foo<usize>` is not satisfied
  --> $DIR/issue-21659-show-relevant-trait-impls-2.rs:38:8
   |
38 |     f1.foo(1usize);
   |        ^^^ the trait `Foo<usize>` is not implemented for `Bar`
   |
   = help: the following implementations were found:
             <Bar: Foo<i8>>
             <Bar: Foo<i16>>
             <Bar: Foo<i32>>
             <Bar: Foo<u8>>
           and 2 others

error: aborting due to previous error

